<resources>
    <string name="app_name">Sporkly</string>
    <string name="myPantryButton">My Pantry</string>
    <string name="myShoppingListButton">My Shopping List</string>
    <string name="myIngredientsButton">Find a Recipe by Ingredients!</string>
    <string name="recipeSearchButton">Search for a Recipe</string>
    <string name="randomRecipeButton">Random Recipe</string>
    <string name="favoritesButton">Favorites</string>
    <string name="welcomeText">Welcome to Sporkly!\nWhat would you like to do today?</string>
    <string name="mealPlanner">Meal Planner</string>
    <string name="milkManButtonText">Sporkly Logo</string>

    <string name="myIngredientLabel">My Ingredients</string>
    <string name="myPantryLabel">My Pantry</string>
    <string name="myShoppingListLabel">My Shopping List</string>
    <string name="recipeSearchLabel">Recipe Search</string>
    <string name="recipeViewLabel">Recipe View</string>
    <string name="favoritesLabel">Favorites</string>
    <string name="plannerLabel">Meal Planner</string>

    <string name="shoppingHint">Enter Ingredient Name</string>
    <string name="shoppingButton">Search Ingredients</string>
    <string name="shoppingTitle">My Shopping List</string>

    <string-array name="choices">
        <item>Coke</item>
        <item>Pepsi</item>
        <item>Sprite</item>
        <item>Seven Up</item>
    </string-array>
</resources>
