<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aharm.sporkly.MainActivity">

    <Button
        android:text="@string/myPantryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myPantry"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/myIngredientsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myIngredients"
        android:layout_above="@+id/myPantry"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp" />

    <TextView
        android:text="@string/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:id="@+id/textView2" />
</RelativeLayout>
